--- a/templates/admin/gi2_liau7_khoo3/語料表/custom_change_form.html
+++ b/templates/admin/gi2_liau7_khoo3/語料表/custom_change_form.html
@@ -8,7 +8,7 @@
     		<div class='form-row'>
 	            <label for="id_mediaElementID">音檔片段：</label>
 	    		<audio controls id='mediaElementID'>
-		        	<source src="/音檔/{{original.音檔.id}}/{{original.聲音開始時間}}/{{original.聲音結束時間}}">
+		        	<source src="/音檔/{{original.音檔.id}}/{{original.聲音開始時間}}/{{original.聲音結束時間}}/audio.wav">
 		        	Your browser does not support the audio element.
 	    		</audio>
 			</div>
