--- a/templates/admin/gi2_liau7_khoo3/語料表/custom_change_form.html
+++ b/templates/admin/gi2_liau7_khoo3/語料表/custom_change_form.html
@@ -7,7 +7,7 @@
 		<fieldset class="module aligned wide">
     		<div class='form-row'>
 	            <label for="id_mediaElementID">音檔片段：</label>
-	    		<audio controls id='mediaElementID'>
+	    		<audio controls id='mediaElementID' autoplay>
 		        	<source src="/音檔/{{original.音檔.id}}/{{original.聲音開始時間}}/{{original.聲音結束時間}}/audio.wav">
 		        	Your browser does not support the audio element.
 	    		</audio>
@@ -15,6 +15,15 @@
 		</fieldset>
   	{% endif %}
 {% endfor %}
+<fieldset class="module aligned wide">
+	<div class='form-row'>
+        <label for="id_mediaElementID2">音檔片段：</label>
+		<audio controls id='mediaElementID2'>
+        	<source src="/音檔/{{original.音檔.id}}/{{original.聲音開始時間}}/{{original.聲音結束時間}}/audio.wav">
+        	Your browser does not support the audio element.
+		</audio>
+	</div>
+</fieldset>
 {% endblock %}
 
 {% block admin_change_form_document_ready %}
