--- a/templates/admin/gi2_liau7_khoo3/語料表/custom_change_form.html
+++ b/templates/admin/gi2_liau7_khoo3/語料表/custom_change_form.html
@@ -15,7 +15,7 @@
 {% endif %}
   	
 {% for fieldset in adminform %}
-	{% include "admin/includes/fieldset.html" %}
+	{% include "admin/gi2_liau7_khoo3/語料表/custom_fieldset.html" %}
 {% endfor %}
 {% endblock %}
 
