--- a/templates/admin/gi2_liau7_khoo3/語料表/檢查_change_form.html
+++ b/templates/admin/gi2_liau7_khoo3/語料表/檢查_change_form.html
@@ -5,7 +5,7 @@
    <input type="submit" 
          value="{% trans '這條愛討論' %}" 
          class="default" 
-         name="這條愛討論" />
+         name="_這條愛討論" />
   {% submit_row %}
 {% endblock %}
 
