調整滿寬度的行高

--- a/static/css/admin_gi2_liau7_pio2.css
+++ b/static/css/admin_gi2_liau7_pio2.css
@@ -30,3 +30,6 @@ form .related-widget-wrapper ul {
 	width: 100%;
 	flex-flow: column nowrap;
 }
+.field-full-width > .field-hint {
+	line-height: 2em;
+}
