修存檔兩擺

--- a/templates/admin/gi2_liau7_khoo3/語料表/custom_change_form.html
+++ b/templates/admin/gi2_liau7_khoo3/語料表/custom_change_form.html
@@ -46,7 +46,7 @@
 	}
 	
 django.jQuery(document).ready(function($){
-	$('#校對表_form').on('keyup keypress', function(e) {
+	$('#校對表_form').on('keypress', function(e) {
 		var keyCode = e.keyCode || e.which;
 		if (keyCode === 13) { 
 		    e.preventDefault();
