--- a/templates/admin/gi2_liau7_khoo3/語料表/custom_fieldset.html
+++ b/templates/admin/gi2_liau7_khoo3/語料表/custom_fieldset.html
@@ -20,11 +20,9 @@
                         	{{ field.field }}
                         	<input type='button' id='senn1pun2tiau7' value='生本調'/>
                         {% elif field.field.name == '本調臺羅' or field.field.name == '口語調臺羅' %}
-                        	<div class="field-full-width">
-	                        	<div class="field-hint">{{field.field.value }}</div>
-	                        	{{ field.field }}
-                        </div>
-                        {% else %}
+                        	<span class="field-hint">{{field.field.value }}</span><br/>
+                         	{{ field.field }}
+                         {% else %}
                             {{ field.field }}
                         {% endif %}
                     {% endif %}
