--- a/static/css/admin_gi2_liau7_pio2.css
+++ b/static/css/admin_gi2_liau7_pio2.css
@@ -19,20 +19,16 @@ form .related-widget-wrapper ul {
 /*
 * Style for TextField
 */
+.field-two-line {
+	display: flex;
+	flex-flow: column nowrap;
+}
+.field-80w {
+	width: 80%;
+}
 .field-hint {
 	color: #666;
 	display: block;
-	line-height: 1.6em; 
-}
-.field-hint-zh {
-	padding-left: 6px;
-}
-.field-long {
-	display: flex;
-	width: 80%;
- 	flex-flow: column nowrap;
-}
-.field-hint-en {
-	margin-left: 0px;
-	padding-left: 7px;
+	line-height: 1.6em;
+	padding-left: 6px; 
 }
