--- a/templates/admin/gi2_liau7_khoo3/語料表/custom_fieldset.html
+++ b/templates/admin/gi2_liau7_khoo3/語料表/custom_fieldset.html
@@ -16,13 +16,17 @@
                         {% if field.is_readonly %}
                             <div class="readonly">{{ field.contents }}</div>
                         {% elif field.field.name == '漢字' %}
-                        	<div class="field-hint"><span class="field-hint-zh">{{field.field.value }}</span></div>
-                        	{{ field.field }}
-                        	<input type='button' id='senn1pun2tiau7' value='生本調'/>
+                        <div class="field-two-line">
+                        	<div class="field-hint">{{field.field.value }}</div>
+                        	<div>
+                        		{{ field.field }}
+                        		<input type='button' id='senn1pun2tiau7' value='生本調'/>
+                        	</div>
+                        </div>
                         {% elif field.field.name == '本調臺羅' or field.field.name == '口語調臺羅' %}
-                        	<div class="field-long">
-	                        	<div class="field-hint"><span class="field-hint-en">{{field.field.value }}</span></div>
-	                        	{{ field.field }}
+                        <div class="field-two-line field-80w">
+	                        <div class="field-hint">{{field.field.value }}</div>
+	                        {{ field.field }}
                         </div>
                         {% else %}
                             {{ field.field }}
