--- a/templates/admin/gi2_liau7_khoo3/語料表/custom_fieldset.html
+++ b/templates/admin/gi2_liau7_khoo3/語料表/custom_fieldset.html
@@ -16,8 +16,10 @@
                         {% if field.is_readonly %}
                             <div class="readonly">{{ field.contents }}</div>
                         {% elif field.field.name == '漢字' %}
-                		<input type='button' id='ing7khau2gi2ting5pio1' value='用口語重標漢字佮本調臺羅'/>
                         <div class="field-two-line">
+                			<div>
+                			    <input type='button' id='ing7khau2gi2ting5pio1' value='重產生標漢字佮本調臺羅'/>
+                			</div>
                         	<div class="field-hint">{{field.field.value }}</div>
                         	<div>
                         		{{ field.field }}
