--- a/static/css/admin_gi2_liau7_pio2.css
+++ b/static/css/admin_gi2_liau7_pio2.css
@@ -1,4 +1,10 @@
 /*
+* Overriding base.css
+*/
+td, th {
+	font-family: "MOEDICT", "Roboto", "Lucida Grande", Verdana, Arial, sans-serif;
+}
+/*
 * Overriding fieldset style 
 */
 .module {
