--- a/static/css/admin_gi2_liau7_pio2.css
+++ b/static/css/admin_gi2_liau7_pio2.css
@@ -1,6 +1,9 @@
 /*
 * Overriding base.css
 */
+body {
+	font-family: "MOEDICT", "Roboto","Lucida Grande","DejaVu Sans","Bitstream Vera Sans",Verdana,Arial,sans-serif;
+}
 td, th {
 	font-family: "MOEDICT", "Roboto", "Lucida Grande", Verdana, Arial, sans-serif;
 }
