文字欄位字型

--- a/static/css/admin_gi2_liau7_pio2.css
+++ b/static/css/admin_gi2_liau7_pio2.css
@@ -4,7 +4,7 @@
 body {
 	font-family: "MOEDICT", "Roboto","Lucida Grande","DejaVu Sans","Bitstream Vera Sans",Verdana,Arial,sans-serif;
 }
-td, th {
+td, th, input, textarea {
 	font-family: "MOEDICT", "Roboto", "Lucida Grande", Verdana, Arial, sans-serif;
 }
 /*
