對調語料狀況和音檔的位置。用css隱藏fieldset分類標題。

--- a/static/css/admin_gi2_liau7_pio2.css
+++ b/static/css/admin_gi2_liau7_pio2.css
@@ -16,6 +16,9 @@ td, th, input, textarea {
 .wide label {
 	width: 100px;
 }
+.module > h2 {
+	display: none;
+}
 /*
 * Overriding style of CheckboxSelectMultiple widget
 */
