--- a/templates/admin/gi2_liau7_khoo3/檢查表/custom_change_form.html
+++ b/templates/admin/gi2_liau7_khoo3/檢查表/custom_change_form.html
@@ -2,11 +2,12 @@
 {% load i18n admin_urls static admin_modify %}
 
 {% block submit_buttons_bottom %}
+  <div class="submit-row">
    <input type="submit" 
          value="{% trans '這條愛討論' %}" 
          class="default" 
          name="_這條愛討論" />
-  {% submit_row %}
+  </div>
 {% endblock %}
 
   
