--- a/templates/admin/gi2_liau7_khoo3/檢查表/custom_change_form.html
+++ b/templates/admin/gi2_liau7_khoo3/檢查表/custom_change_form.html
@@ -1,6 +1,24 @@
 {% extends "admin/gi2_liau7_khoo3/語料表/custom_change_form.html" %}
 {% load i18n admin_urls static admin_modify %}
 
+{% block field_sets %}
+  	
+{% if original.音檔.原始檔 != None %}
+	<fieldset class="module aligned wide">
+		<div class='form-row'>
+	        <label for="id_mediaElementID">音檔片段：</label>
+			<audio controls id='mediaElementID' autoplay>
+	        	<source src="/音檔/{{original.音檔.id}}/{{original.聲音開始時間}}/{{original.聲音結束時間}}/audio.wav">
+	        	Your browser does not support the audio element.
+			</audio>
+		</div>
+	</fieldset>
+{% endif %}
+{% for fieldset in adminform %}
+    {% include "admin/includes/fieldset.html" %}
+{% endfor %}
+{% endblock %}
+
 {% block submit_buttons_bottom %}
   <div class="submit-row">
    <input type="submit" 
